<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <include layout="@layout/header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/circletrans"
                android:importantForAccessibility="no"
                android:src="@drawable/profilebuttonicon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/profilenameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/profileName"/>

                <TextView
                    android:id="@+id/profileAadhaarTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/profileAadhaar"/>

                <TextView
                    android:id="@+id/profilePhoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/profilePhone"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight="2"
            android:gravity="center">

            <ImageButton
                android:id="@+id/cityPointsButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.5"
                android:background="@color/grey_0"
                android:importantForAccessibility="no"
                android:src="@drawable/rewardicon" />

            <ImageButton
                android:id="@+id/offersButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.5"
                android:background="@color/grey_0"
                android:importantForAccessibility="no"
                android:src="@drawable/offericon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="6"
            android:orientation="vertical"
            android:padding="0dp">
            <Button
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Settings"
                android:paddingVertical="0dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/grey_0"
                android:drawableEnd="@drawable/settingsicon" />
            <Button
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="0dp"
                android:backgroundTint="@color/white"
                android:text="History"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/historyicon" />
            <Button
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="0dp"
                android:backgroundTint="@color/grey_0"
                android:text="Report"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/reporticon" />
            <Button
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:paddingVertical="0dp"
                android:text="Help us improve"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/helpusicon" />
            <Button
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="0dp"
                android:backgroundTint="@color/grey_0"
                android:text="Invite a friend"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/inviteicon" />

            <Button
                android:id="@+id/signOutButton"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:paddingVertical="0dp"
                android:text="SIGN OUT"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/signouticon" />
        </LinearLayout>

        <include layout="@layout/footer"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>